[gd_scene load_steps=4 format=2]

[ext_resource path="res://Text&Button.gd" type="Script" id=1]
[ext_resource path="res://Assets/Gamepixies-8MO6n.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="TitleMenu" type="CanvasLayer"]

[node name="background" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_right = 320.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="RichTextLabel" parent="."]
margin_left = 96.0
margin_top = 16.0
margin_right = 232.0
margin_bottom = 56.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]START[/center]"
text = "START"
scroll_active = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Start"]
anchor_left = 0.059
anchor_right = 0.059
margin_left = -0.0240002
margin_right = 111.976
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="RichTextLabel" parent="."]
margin_left = 96.0
margin_top = 128.0
margin_right = 232.0
margin_bottom = 168.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Exit[/center]"
text = "Exit"
scroll_active = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Exit"]
margin_left = 8.0
margin_right = 120.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Start/Button" to="Start" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Start/Button" to="Start" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Start/Button" to="Start" method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Exit/Button" to="Exit" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Exit/Button" to="Exit" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Exit/Button" to="Exit" method="_on_Button_pressed"]
